--- a/firebase_auth_expense/pubspec.yaml
+++ b/firebase_auth_expense/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: ^4.1.0
   modal_progress_hud_nsn: ^0.5.1
   firebase_auth: ^6.0.2
+  google_sign_in: ^7.1.1
+  cloud_firestore: ^6.0.1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
